# GPIO_RD

./: CMakeLists.txt  LICENSE
OrangePiZero3_Allwinner_H618/: CMakeLists.txt
OrangePiZero3_Allwinner_H618/include/: gpio.h
OrangePiZero3_Allwinner_H618/src/: testLibGpiod.cpp  testLibGpiodv2.cpp  testLibGpiodv2_throughput.cpp  testMmapGpio.cpp  testMmapGpio_throughput.cpp  testSysClassGpio.cpp  testSysClassGpio_throughput.cpp
RP2040_TestBench/: CMakeLists.txt
